--- a/src/server/pom.xml
+++ b/src/server/pom.xml
@@ -55,6 +55,11 @@
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-client</artifactId>
+            <version>${dropwizard.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-jdbi</artifactId>
             <version>${dropwizard.version}</version>
         </dependency>
@@ -169,12 +174,16 @@
           <version>2.25.1</version>
         </dependency>
         <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-sse</artifactId>
+            <version>2.25.1</version>
+        </dependency>
+        <dependency>
             <!-- required to solve dropwizard 1.1.7 & jersery-client 2.25.1 dependency issues -->
             <groupId>org.glassfish.hk2</groupId>
             <artifactId>hk2-api</artifactId>
             <version>2.5.0-b61</version>
         </dependency>
-        
         <!--test scope -->
 
         <dependency>
